fix header white space; banner;

--- a/src/module/header/presentation/Header.module.css
+++ b/src/module/header/presentation/Header.module.css
@@ -79,8 +79,10 @@
 
 
 .navBar {
+    min-width: 320px;
     margin: 0;
     padding: 0;
+    border-bottom: 1px solid #cecece;
 }
 
 .leftNav {
